<resources>
    <string name="app_name">Foundation</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account? </string>
    <string name="sign_up"> Sign Up</string>
    <string name="forgot_password">Forgot Password?" "</string>
    <string name="recovery">Recovery</string>
    <string name="user_name">User Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>